<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbars="vertical">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="fill_vertical">
			<Button android:layout_width="90dip"
				android:layout_height="wrap_content" android:text="@string/firstname"
				android:gravity="center" android:background="@android:drawable/btn_default"
				android:clickable="false" android:focusable="false" />
			<EditText android:id="@+id/firstName" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="fill_vertical">
			<Button android:layout_width="90dip"
				android:layout_height="wrap_content" android:text="@string/lastname"
				android:gravity="center" android:background="@android:drawable/btn_default"
				android:clickable="false" android:focusable="false" />
			<EditText android:id="@+id/lastName" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="fill_vertical">
			<Button android:layout_width="90dip"
				android:layout_height="wrap_content" android:text="@string/address"
				android:gravity="center" android:background="@android:drawable/btn_default"
				android:clickable="false" android:focusable="false" />
			<EditText android:id="@+id/address" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="fill_vertical">
			<Button android:layout_width="90dip"
				android:layout_height="wrap_content" android:text="@string/email"
				android:gravity="center" android:background="@android:drawable/btn_default"
				android:clickable="false" android:focusable="false" />
			<EditText android:id="@+id/email" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="fill_vertical">
			<Button android:layout_width="90dip"
				android:layout_height="wrap_content" android:text="@string/usernameR"
				android:gravity="center" android:background="@android:drawable/btn_default"
				android:clickable="false" android:focusable="false" />
			<EditText android:id="@+id/username" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="fill_vertical">
			<Button android:layout_width="90dip"
				android:layout_height="wrap_content" android:text="@string/passwordR"
				android:gravity="center" android:background="@android:drawable/btn_default"
				android:clickable="false" android:focusable="false" />
			<EditText android:id="@+id/password" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:password="true" 
				android:layout_weight="1" android:maxLength="32"/>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="fill_vertical">
			<Button android:layout_width="90dip"
				android:layout_height="wrap_content" android:text="@string/passwordConfirm"
				android:gravity="center" android:background="@android:drawable/btn_default"
				android:clickable="false" android:focusable="false" />
			<EditText android:id="@+id/passwordConfirm"
				android:layout_width="wrap_content" android:layout_height="fill_parent"
				android:password="true" android:layout_weight="1" android:maxLength="32"/>
			<ImageButton android:id="@+id/confirm"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:gravity="center" android:background="@android:drawable/ic_delete"
				android:clickable="false" android:focusable="false" android:scaleType="fitXY"/>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<ImageView android:id="@+id/captcha" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:scaleType="fitXY"
				android:gravity="fill_vertical" />
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/captcha"
					android:layout_weight="1" android:gravity="center" />
				<EditText android:id="@+id/captchaText"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:numeric="integer" android:layout_weight="1" />
			</LinearLayout>
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<CheckBox android:id="@+id/checkEULA" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/eula" />
			<TextView android:id="@+id/terms" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text=" licensing terms"
				android:clickable="true" android:autoLink="web" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/ok" android:text="@string/ok"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_weight="1" />
			<Button android:id="@+id/cancel" android:text="@string/cancel"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>